[Sync] Fix USS type status counters.

It seems that NonBlockingTypeDebugInfoEmitter is actually always
invoked when the about-sync page is loaded, not just when the 'Types'
tab is opened. So I've removed the 0 values it emitted, since the other
status counter mechanism through PSS/DTC is always invoked on
about-sync load.

However, the above change didn't completely fix the problem. Instead of
showing 0 for Autofill, I'd see "undefined". This turns out to be
because update/commit counters send the same type of message to the
javascript, but lack num entries in the counters map. It worked out
just fine for Directory types because they'd always send the status
counters after update/commit, but non-blocking types don't have a sync
thread mechanism anymore, and so they cannot take this approach. My fix
is simply don't update in the javascript when num entries are not
defined, so we'll keep the early value from PSS/DTC.

BUG=687013

Review-Url: https://codereview.chromium.org/2666023002
Cr-Commit-Position: refs/heads/master@{#447364}

Former-commit-id: 9e27208d9936f21f7554396af03c29c508e3d62e