components/sync/engine_impl/cycle/non_blocking_type_debug_info_emitter.cc
@@ -4,11 +4,6 @@
 
 #include "components/sync/engine_impl/cycle/non_blocking_type_debug_info_emitter.h"
 
-#include <vector>
-
-#include "components/sync/engine/cycle/status_counters.h"
-#include "components/sync/engine/cycle/type_debug_info_observer.h"
-
 namespace syncer {
 
 NonBlockingTypeDebugInfoEmitter::NonBlockingTypeDebugInfoEmitter(
@@ -19,14 +14,10 @@ NonBlockingTypeDebugInfoEmitter::NonBlockingTypeDebugInfoEmitter(
 NonBlockingTypeDebugInfoEmitter::~NonBlockingTypeDebugInfoEmitter() {}
 
 void NonBlockingTypeDebugInfoEmitter::EmitStatusCountersUpdate() {
-  // TODO(gangwu): this function is to show Total Entries on "Types" tab on
-  // chrome://sync-internals, we decide to show zero right now, because it is
-  // hard to let emitter to get object of SharedModelTypeProcessor or
-  // ModelTypeStore, and also people can get the numbers from "about" tab on
-  // chrome://sync-internals.
-  StatusCounters counters;
-  for (auto& observer : *type_debug_info_observers_)
-    observer.OnStatusCountersUpdated(type_, counters);
+  // TODO(gangwu): Allow driving emission of status counters from here. This is
+  // tricky because we do not have access to SharedModelTypeProcessor or
+  // ModelTypeStore currently. This method is fairly redundant since counters
+  // are also emitted from the UI thread, unclear how important this is.
 }
 
 }  // namespace syncer
